--- a/electronica/capacitor.html
+++ b/electronica/capacitor.html
@@ -67,27 +67,31 @@
                 </div>
                 <h2>Aplicaciones</h2>
                 <p>Los capacitores tienen una amplia gama de aplicaciones en la electrónica y otras áreas. Algunos usos comunes incluyen:</p>
-                <p>- Filtrado y acoplamiento: Los capacitores se utilizan en circuitos electrónicos para filtrar frecuencias no deseadas y acoplar señales entre diferentes etapas de un circuito.</p>
-                <p>- Arranque de motores: En sistemas eléctricos, los capacitores de arranque se utilizan para proporcionar un impulso inicial a los motores eléctricos.</p>
-                <p>- Fuentes de energía: Los capacitores se utilizan en fuentes de energía ininterrumpida (UPS) para almacenar energía y liberarla cuando se produce una interrupción del suministro eléctrico</p>
-                <p>- Electrónica de consumo: Se encuentran en dispositivos electrónicos comunes, como televisores, radios, cámaras y teléfonos móviles.</p>
-                <p>- Almacenamiento de energía: En la investigación de energía renovable y sistemas de distribución eléctrica inteligente, los capacitores se utilizan para almacenar energía y equilibrar las cargas de la red.</p>
+                <ul style="list-style-type: circle;">
+                    <li>Filtrado y acoplamiento: Los capacitores se utilizan en circuitos electrónicos para filtrar frecuencias no deseadas y acoplar señales entre diferentes etapas de un circuito.</li>
+                    <li>Arranque de motores: En sistemas eléctricos, los capacitores de arranque se utilizan para proporcionar un impulso inicial a los motores eléctricos.</li>
+                    <li>Fuentes de energía: Los capacitores se utilizan en fuentes de energía ininterrumpida (UPS) para almacenar energía y liberarla cuando se produce una interrupción del suministro eléctrico</li>
+                    <li>Electrónica de consumo: Se encuentran en dispositivos electrónicos comunes, como televisores, radios, cámaras y teléfonos móviles.</li>
+                    <li>Almacenamiento de energía: En la investigación de energía renovable y sistemas de distribución eléctrica inteligente, los capacitores se utilizan para almacenar energía y equilibrar las cargas de la red.</li>
+                </ul>
                 <div class="blog-image">
                     <img src="media/capacitor3.jpg" alt="">
                 </div>                
                 <h2>Tipos de capacitores</h2>
                 <p>Existen varios tipos de capacitores, cada uno con características y aplicaciones específicas. A continuación, se presentan algunos de los tipos más comunes:</p>
-                <p>- Capacitor de cerámica: Son pequeños y económicos. Se utilizan en aplicaciones de alta frecuencia, acoplamientos y desacoplamientos de señales, filtrado y circuitos integrados.</p>
-                <p>- Capacitor electrolítico de aluminio: Tienen una alta capacidad de almacenamiento y se usan en aplicaciones de baja frecuencia, como fuentes de alimentación y acoplamientos de audio.</p>
-                <p>- Capacitor electrolítico de tantalio: Similar al de aluminio, pero ofrece una mayor estabilidad y precisión. Se utiliza en aplicaciones donde se requiere una mayor fiabilidad y donde el tamaño es un factor crítico.</p>
-                <p>- Capacitor de poliéster: Adecuados para aplicaciones de alta frecuencia y filtrado.</p>
-                <p>- Capacitor de polipropileno: Ofrecen una alta precisión y estabilidad, utilizados en aplicaciones de alta calidad, como en filtros de audio y crossovers de altavoces.</p>
-                <p>- Capacitor de película de poliéster metalizado: Son utilizados en aplicaciones de alta frecuencia y aplicaciones de corriente alterna.</p>
-                <p>- Capacitor de película de polipropileno metalizado: Ofrecen una alta precisión y baja pérdida, utilizados en aplicaciones de filtrado y alta frecuencia.</p>
-                <p>- Capacitor de tantalio de estado sólido: Son más pequeños y confiables que los electrolíticos de tantalio. Se utilizan en aplicaciones de alta densidad y donde se requiere una alta fiabilidad.</p>
-                <p>- Supercondensadores: Tienen una capacitancia mucho mayor que los capacitores convencionales y se utilizan en aplicaciones de almacenamiento de energía, como en vehículos eléctricos y sistemas de recuperación de energía.</p>
-                <p>- Capacitor de montaje superficial (SMD): Son diseñados para soldarse directamente a las placas de circuito impreso, lo que permite una mayor densidad de componentes y una facilidad de montaje automatizado.</p>
-                <p>- Capacitores variables: Permiten ajustar manual o electrónicamente su capacitancia y se utilizan en aplicaciones como sintonización de radios y en osciladores controlados.</p>
+                <ul style="list-style-type: circle;">
+                    <li>Capacitor de cerámica: Son pequeños y económicos. Se utilizan en aplicaciones de alta frecuencia, acoplamientos y desacoplamientos de señales, filtrado y circuitos integrados.</li>
+                    <li>Capacitor electrolítico de aluminio: Tienen una alta capacidad de almacenamiento y se usan en aplicaciones de baja frecuencia, como fuentes de alimentación y acoplamientos de audio.</li>
+                    <li>Capacitor electrolítico de tantalio: Similar al de aluminio, pero ofrece una mayor estabilidad y precisión. Se utiliza en aplicaciones donde se requiere una mayor fiabilidad y donde el tamaño es un factor crítico.</li>
+                    <li>Capacitor de poliéster: Adecuados para aplicaciones de alta frecuencia y filtrado.</li>
+                    <li>Capacitor de polipropileno: Ofrecen una alta precisión y estabilidad, utilizados en aplicaciones de alta calidad, como en filtros de audio y crossovers de altavoces.</li>
+                    <li>Capacitor de película de poliéster metalizado: Son utilizados en aplicaciones de alta frecuencia y aplicaciones de corriente alterna.</li>
+                    <li>Capacitor de película de polipropileno metalizado: Ofrecen una alta precisión y baja pérdida, utilizados en aplicaciones de filtrado y alta frecuencia.</li>
+                    <li>Capacitor de tantalio de estado sólido: Son más pequeños y confiables que los electrolíticos de tantalio. Se utilizan en aplicaciones de alta densidad y donde se requiere una alta fiabilidad.</li>
+                    <li>Supercondensadores: Tienen una capacitancia mucho mayor que los capacitores convencionales y se utilizan en aplicaciones de almacenamiento de energía, como en vehículos eléctricos y sistemas de recuperación de energía.</li>
+                    <li>Capacitor de montaje superficial (SMD): Son diseñados para soldarse directamente a las placas de circuito impreso, lo que permite una mayor densidad de componentes y una facilidad de montaje automatizado.</li>
+                    <li>Capacitores variables: Permiten ajustar manual o electrónicamente su capacitancia y se utilizan en aplicaciones como sintonización de radios y en osciladores controlados.</li>
+                </ul>
                 <div class="blog-image-grande">
                     <img src="media/capacitor4.jpg" alt="">
                 </div>
