--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -53,7 +53,7 @@
                 </div>
                 <h2>Cálculo</h2>
                 <p>Calcular el valor de un inductor (inductancia) es esencial para diseñar y seleccionar componentes adecuados para diferentes aplicaciones electrónicas. La inductancia de un inductor depende de varios factores, incluyendo el número de vueltas en la bobina, el área de la sección transversal, el material del núcleo y la permeabilidad magnética del núcleo, entre otros. Para calcular la inductancia de un inductor, se usan los siguientes métodos:</p>
-                <p>- La inductancia (L) de un solenoide (bobina) en el aire se puede calcular utilizando la siguiente fórmula aproximada:</p>
+                <p>La inductancia (L) de un solenoide (bobina) en el aire se puede calcular utilizando la siguiente fórmula aproximada:</p>
                 <br>
                 <center>
                     <p>L ≈ (μ₀ * N² * A) / l</p>
@@ -66,32 +66,38 @@
                 </center>
                 <br>
                 <h2>Características</h2>
-                <p>- Fórmula para inductancia de un inductor con núcleo de hierro o ferrita: Si el inductor tiene un núcleo de material ferromagnético (como hierro o ferrita), la fórmula para calcular la inductancia es más compleja y depende de la geometría del núcleo. En este caso, se utilizan ecuaciones específicas y tablas de datos proporcionados por los fabricantes de inductores o herramientas de diseño de inductores disponibles en línea.</p>
-                <p>- Simulación y software de diseño: Para inductores más complejos con núcleos específicos o diseños personalizados, a menudo es necesario recurrir a simulaciones con software de diseño de inductores. Estas herramientas de software pueden proporcionar resultados más precisos y tener en cuenta factores como la reluctancia del núcleo, la saturación magnética y otros efectos no lineales.</p>
-                <p>- Valores estándar: En la práctica, los inductores comerciales están disponibles en valores estándar de inductancia, y es posible seleccionar uno que se ajuste a las necesidades del diseño sin necesidad de calcularlo desde cero.</p>
+                <ul style="list-style-type: circle;">
+                    <li>Fórmula para inductancia de un inductor con núcleo de hierro o ferrita: Si el inductor tiene un núcleo de material ferromagnético (como hierro o ferrita), la fórmula para calcular la inductancia es más compleja y depende de la geometría del núcleo. En este caso, se utilizan ecuaciones específicas y tablas de datos proporcionados por los fabricantes de inductores o herramientas de diseño de inductores disponibles en línea.</li>
+                    <li>Simulación y software de diseño: Para inductores más complejos con núcleos específicos o diseños personalizados, a menudo es necesario recurrir a simulaciones con software de diseño de inductores. Estas herramientas de software pueden proporcionar resultados más precisos y tener en cuenta factores como la reluctancia del núcleo, la saturación magnética y otros efectos no lineales.</li>
+                    <li>Valores estándar: En la práctica, los inductores comerciales están disponibles en valores estándar de inductancia, y es posible seleccionar uno que se ajuste a las necesidades del diseño sin necesidad de calcularlo desde cero.</li>
+                </ul>
                 <div class="blog-image">
                     <img src="media/inductor2.jpg" alt="">
                 </div>
                 <h2>Aplicaciones</h2>
                 <p>Los inductores tienen una amplia gama de aplicaciones en la electrónica y otras áreas de la tecnología. Algunos usos comunes incluyen:</p>
-                <p>- Filtrado: Se utilizan en circuitos de filtrado para bloquear o atenuar ciertas frecuencias y permitir el paso de otras.</p>
-                <p>- Transformadores: Los inductores con núcleo de hierro o ferrita se utilizan en transformadores para cambiar la tensión de una señal de corriente alterna.</p>
-                <p>- Almacenamiento de Energía: Los inductores se utilizan en aplicaciones de almacenamiento de energía, como en convertidores de potencia y sistemas de energía renovable.</p>
-                <p>- Cancelación de Ruido: Los inductores se emplean en circuitos de cancelación de ruido, especialmente en aplicaciones de audio y comunicaciones.</p>
-                <p>- Antenas: En la transmisión de señales inalámbricas, los inductores se utilizan en antenas para sintonizar la frecuencia de transmisión.</p>
+                <ul style="list-style-type: circle;">
+                    <li>Filtrado: Se utilizan en circuitos de filtrado para bloquear o atenuar ciertas frecuencias y permitir el paso de otras.</li>
+                    <li>Transformadores: Los inductores con núcleo de hierro o ferrita se utilizan en transformadores para cambiar la tensión de una señal de corriente alterna.</li>
+                    <li>Almacenamiento de Energía: Los inductores se utilizan en aplicaciones de almacenamiento de energía, como en convertidores de potencia y sistemas de energía renovable.</li>
+                    <li>Cancelación de Ruido: Los inductores se emplean en circuitos de cancelación de ruido, especialmente en aplicaciones de audio y comunicaciones.</li>
+                    <li>Antenas: En la transmisión de señales inalámbricas, los inductores se utilizan en antenas para sintonizar la frecuencia de transmisión.</li>
+                </ul>
                 <div class="blog-image-grande">
                     <img src="media/inductor3.jpg" alt="">
                 </div>
                 <h2>Tipos de inductores</h2>
                 <p>Los inductores pueden clasificarse en diferentes tipos según su diseño, construcción y aplicaciones específicas. Aquí están algunos de los tipos más comunes de inductores:</p>
-                <p>- Inductor de bobina o solenoide: Es el tipo más básico y común de inductor. Consiste en un alambre enrollado alrededor de un núcleo, generalmente de aire. Se utiliza ampliamente en aplicaciones como filtros, acoplamientos y almacenamiento de energía.</p>
-                <p>- Inductor de núcleo de hierro: En este tipo de inductor, el alambre está enrollado alrededor de un núcleo de hierro. Los inductores de núcleo de hierro ofrecen una mayor inductancia en comparación con los de núcleo de aire, y se utilizan en aplicaciones que requieren una mayor potencia y eficiencia, como transformadores y bobinas de choque.</p>
-                <p>- Inductor de núcleo de ferrita: Este inductor utiliza un núcleo hecho de material ferromagnético llamado ferrita. Los inductores de núcleo de ferrita se utilizan en aplicaciones de alta frecuencia debido a sus excelentes propiedades magnéticas a altas frecuencias. Son comunes en transformadores de alta frecuencia, fuentes de alimentación conmutadas y dispositivos de radiofrecuencia.</p>
-                <p>- Inductor de núcleo toroidal: En este diseño, el alambre se enrolla alrededor de un núcleo toroidal, que tiene una forma de anillo. Los inductores de núcleo toroidal ofrecen una alta inductancia y baja radiación electromagnética, lo que los hace adecuados para aplicaciones de filtrado y acoplamiento en sistemas de audio y radiofrecuencia.</p>
-                <p>- Inductor variable: También conocido como bobina ajustable, es un inductor cuya inductancia se puede cambiar variando el número de vueltas de la bobina o mediante un núcleo móvil que ajusta la permeabilidad magnética. Se utilizan en aplicaciones donde se requiere ajuste o sintonización de la inductancia, como en radios y antenas.</p>
-                <p>- Inductor de película: Estos inductores están fabricados utilizando tecnología de película delgada y se utilizan en aplicaciones de alta frecuencia, como en circuitos integrados y dispositivos de microondas.</p>
-                <p>- Inductor multicapa (MLI): Es un tipo de inductor que se fabrica utilizando tecnología de circuitos impresos y se integra directamente en placas de circuito impreso. Son comunes en aplicaciones de alta frecuencia y donde el espacio es un factor crítico.</p>
-                <p>- Inductor de potencia: Estos inductores están diseñados para manejar corrientes elevadas y se utilizan en aplicaciones de alta potencia, como fuentes de alimentación, convertidores y motores.</p>
+                <ul style="list-style-type: circle;">
+                    <li>Inductor de bobina o solenoide: Es el tipo más básico y común de inductor. Consiste en un alambre enrollado alrededor de un núcleo, generalmente de aire. Se utiliza ampliamente en aplicaciones como filtros, acoplamientos y almacenamiento de energía.</li>
+                    <li>Inductor de núcleo de hierro: En este tipo de inductor, el alambre está enrollado alrededor de un núcleo de hierro. Los inductores de núcleo de hierro ofrecen una mayor inductancia en comparación con los de núcleo de aire, y se utilizan en aplicaciones que requieren una mayor potencia y eficiencia, como transformadores y bobinas de choque.</li>
+                    <li>Inductor de núcleo de ferrita: Este inductor utiliza un núcleo hecho de material ferromagnético llamado ferrita. Los inductores de núcleo de ferrita se utilizan en aplicaciones de alta frecuencia debido a sus excelentes propiedades magnéticas a altas frecuencias. Son comunes en transformadores de alta frecuencia, fuentes de alimentación conmutadas y dispositivos de radiofrecuencia.</li>
+                    <li>Inductor de núcleo toroidal: En este diseño, el alambre se enrolla alrededor de un núcleo toroidal, que tiene una forma de anillo. Los inductores de núcleo toroidal ofrecen una alta inductancia y baja radiación electromagnética, lo que los hace adecuados para aplicaciones de filtrado y acoplamiento en sistemas de audio y radiofrecuencia.</li>
+                    <li>Inductor variable: También conocido como bobina ajustable, es un inductor cuya inductancia se puede cambiar variando el número de vueltas de la bobina o mediante un núcleo móvil que ajusta la permeabilidad magnética. Se utilizan en aplicaciones donde se requiere ajuste o sintonización de la inductancia, como en radios y antenas.</li>
+                    <li>Inductor de película: Estos inductores están fabricados utilizando tecnología de película delgada y se utilizan en aplicaciones de alta frecuencia, como en circuitos integrados y dispositivos de microondas.</li>
+                    <li>Inductor multicapa (MLI): Es un tipo de inductor que se fabrica utilizando tecnología de circuitos impresos y se integra directamente en placas de circuito impreso. Son comunes en aplicaciones de alta frecuencia y donde el espacio es un factor crítico.</li>
+                    <li>Inductor de potencia: Estos inductores están diseñados para manejar corrientes elevadas y se utilizan en aplicaciones de alta potencia, como fuentes de alimentación, convertidores y motores.</li>
+                </ul>
                 <br>
                 <br>
             </div>   
