--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -40,12 +40,14 @@
                 <p>Linux es un sistema operativo de código abierto y gratuito basado en el núcleo de Linux. Fue creado inicialmente por Linus Torvalds en 1991 y ha sido desarrollado colaborativamente por una comunidad de programadores de todo el mundo desde entonces. Su diseño modular y flexible lo ha convertido en uno de los sistemas operativos más populares en una amplia gama de dispositivos y entornos, desde computadoras personales hasta servidores, dispositivos móviles y sistemas integrados.</p>
                 <br>
                 <p>En términos generales, Linux es una plataforma que permite a los usuarios interactuar con una computadora y realizar tareas como ejecutar programas, navegar por internet, gestionar archivos y realizar diversas actividades informáticas. A diferencia de otros sistemas operativos más comerciales, Linux se destaca por las siguientes características clave:</p>
-                <p>1. Código abierto: La mayor parte de Linux, incluido el núcleo, está disponible públicamente en forma de código fuente. Esto significa que cualquiera puede ver, modificar y distribuir el sistema operativo según los términos de sus licencias de software.</p>
-                <p>2. Personalización y variedad: Existen muchas distribuciones de Linux (también conocidas como "distros") desarrolladas por diferentes grupos o empresas, cada una con su enfoque y conjunto de aplicaciones preinstaladas. Esto permite a los usuarios elegir la distribución que mejor se adapte a sus necesidades y preferencias.</p>
-                <p>3. Estabilidad y seguridad: Linux ha ganado una reputación de ser un sistema operativo estable y seguro. La comunidad de desarrollo y las actualizaciones frecuentes contribuyen a solucionar problemas y mejorar la seguridad del sistema.</p>
-                <p>4. Terminal y línea de comandos: Aunque las distribuciones de Linux generalmente proporcionan interfaces gráficas, también se puede acceder y controlar el sistema a través de la terminal o línea de comandos, lo que ofrece a los usuarios un alto nivel de control y flexibilidad.</p>
-                <p>5. Multitarea y multiusuario: Linux está diseñado para permitir la ejecución simultánea de múltiples procesos y múltiples usuarios pueden acceder al sistema al mismo tiempo de manera segura.</p>
-                <p>6. Licencia GNU GPL: La mayoría de las distribuciones de Linux están licenciadas bajo la Licencia Pública General de GNU (GPL), lo que significa que el software puede ser utilizado, copiado y distribuido libremente con ciertas restricciones.</p>
+                <ol>
+                  <li>Código abierto: La mayor parte de Linux, incluido el núcleo, está disponible públicamente en forma de código fuente. Esto significa que cualquiera puede ver, modificar y distribuir el sistema operativo según los términos de sus licencias de software.</li>
+                  <li>Personalización y variedad: Existen muchas distribuciones de Linux (también conocidas como "distros") desarrolladas por diferentes grupos o empresas, cada una con su enfoque y conjunto de aplicaciones preinstaladas. Esto permite a los usuarios elegir la distribución que mejor se adapte a sus necesidades y preferencias.</li>
+                  <li>Estabilidad y seguridad: Linux ha ganado una reputación de ser un sistema operativo estable y seguro. La comunidad de desarrollo y las actualizaciones frecuentes contribuyen a solucionar problemas y mejorar la seguridad del sistema.</li>
+                  <li>Terminal y línea de comandos: Aunque las distribuciones de Linux generalmente proporcionan interfaces gráficas, también se puede acceder y controlar el sistema a través de la terminal o línea de comandos, lo que ofrece a los usuarios un alto nivel de control y flexibilidad.</li>
+                  <li>Multitarea y multiusuario: Linux está diseñado para permitir la ejecución simultánea de múltiples procesos y múltiples usuarios pueden acceder al sistema al mismo tiempo de manera segura.</li>
+                  <li>Licencia GNU GPL: La mayoría de las distribuciones de Linux están licenciadas bajo la Licencia Pública General de GNU (GPL), lo que significa que el software puede ser utilizado, copiado y distribuido libremente con ciertas restricciones.</li>
+                </ol>
                 <br>
                 <p>Linux ha ganado popularidad en numerosos campos, desde servidores web y sistemas embebidos hasta supercomputadoras y dispositivos móviles. También ha sido la base para el desarrollo de sistemas operativos populares como Android, que se utiliza en una gran cantidad de smartphones y tabletas en todo el mundo. En resumen, Linux representa una opción sólida y versátil para aquellos que buscan un sistema operativo potente, flexible y de código abierto.</p>
                 <div class="blog-image">
@@ -53,26 +55,43 @@
                 </div>
                 <h2>Linux, Windows y macOS</h2>
                 <p>Linux, Windows y macOS son tres sistemas operativos diferentes que tienen enfoques distintos, características únicas y bases de usuarios específicas. Aquí hay algunas diferencias clave entre ellos:</p>
-                <p>1. Tipo de licencia:</p>
-                <p>- Linux: Es un sistema operativo de código abierto, lo que significa que su código fuente es accesible para todos, y se puede modificar, distribuir y utilizar libremente.</p>
-                <p>- Windows: Es un sistema operativo propietario desarrollado por Microsoft. Los usuarios deben adquirir una licencia para utilizarlo, y el código fuente no es accesible públicamente.</p>
-                <p>- macOS: Es también un sistema operativo propietario desarrollado por Apple y está diseñado para funcionar exclusivamente en hardware de Apple.</p>
-                <p>2. Interfaz de usuario:</p>
-                <p>- Linux: Existen diversas interfaces gráficas en las diferentes distribuciones de Linux, como GNOME, KDE, Xfce, entre otras. Los usuarios pueden elegir la que mejor se adapte a sus preferencias.</p>
-                <p>- Windows: Tiene una interfaz de usuario coherente a lo largo de las versiones, con el menú Inicio y la barra de tareas como elementos característicos.</p>
-                <p>- macOS: Se destaca por su diseño elegante y su enfoque en la usabilidad, con la barra de menús en la parte superior de la pantalla y el dock para acceder a aplicaciones frecuentes.</p>
-                <p>3. Disponibilidad de software:</p>
-                <p>- Linux: Cuenta con una amplia selección de software gratuito y de código abierto disponible en los repositorios oficiales de las distribuciones, lo que facilita la instalación y actualización de programas.</p>
-                <p>- Windows: Ofrece una gran cantidad de software comercial y gratuito, con una amplia gama de aplicaciones y juegos disponibles. La tienda de aplicaciones de Microsoft también proporciona acceso a una variedad de software.</p>
-                <p>- macOS: Dispone de una tienda de aplicaciones oficial llamada App Store y también admite la instalación de software desde otras fuentes.</p>
-                <p>4. Compatibilidad de hardware:</p>
-                <p>- Linux: Ha mejorado significativamente en términos de compatibilidad de hardware, pero aún puede haber problemas con ciertos componentes más nuevos o especializados.</p>
-                <p>- Windows: Es conocido por su amplia compatibilidad con hardware, ya que muchos fabricantes de hardware desarrollan controladores específicamente para Windows.</p>
-                <p>- macOS: Funciona exclusivamente en hardware de Apple, lo que garantiza una alta integración y compatibilidad con sus dispositivos.</p>
-                <p>5. Uso en servidores y dispositivos móviles:</p>
-                <p>- Linux: Es ampliamente utilizado en servidores debido a su estabilidad, seguridad y capacidad de personalización. Además, Android, un sistema operativo móvil basado en Linux, es el más popular en dispositivos móviles.</p>
-                <p>- Windows: También se utiliza en servidores, especialmente en entornos corporativos, pero Linux es más dominante en este ámbito. Windows Phone fue el intento de Microsoft de entrar en el mercado de dispositivos móviles, pero no logró una gran cuota de mercado.</p>
-                <p>- macOS: Aunque no es comúnmente utilizado en servidores, macOS es popular en el ámbito creativo y educativo, y es el sistema operativo predeterminado en las computadoras Mac de Apple.</p>
+                <br>
+                <ol>
+                  <li>Tipo de licencia:</li>
+                    <ul style="list-style-type: square;">
+                      <li>Linux: Es un sistema operativo de código abierto, lo que significa que su código fuente es accesible para todos, y se puede modificar, distribuir y utilizar libremente.</li>
+                      <li>Windows: Es un sistema operativo propietario desarrollado por Microsoft. Los usuarios deben adquirir una licencia para utilizarlo, y el código fuente no es accesible públicamente.</li>
+                      <li>macOS: Es también un sistema operativo propietario desarrollado por Apple y está diseñado para funcionar exclusivamente en hardware de Apple.</li>
+                    </ul>
+                <br>    
+                  <li>Interfaz de usuario:</li>
+                    <ul style="list-style-type: square;">
+                      <li>Linux: Existen diversas interfaces gráficas en las diferentes distribuciones de Linux, como GNOME, KDE, Xfce, entre otras. Los usuarios pueden elegir la que mejor se adapte a sus preferencias.</li>
+                      <li>Windows: Tiene una interfaz de usuario coherente a lo largo de las versiones, con el menú Inicio y la barra de tareas como elementos característicos.</li>
+                      <li>macOS: Se destaca por su diseño elegante y su enfoque en la usabilidad, con la barra de menús en la parte superior de la pantalla y el dock para acceder a aplicaciones frecuentes.</li>
+                    </ul>
+                <br>    
+                  <li>Disponibilidad de software:</li>
+                    <ul style="list-style-type: square;">  
+                      <li>Linux: Cuenta con una amplia selección de software gratuito y de código abierto disponible en los repositorios oficiales de las distribuciones, lo que facilita la instalación y actualización de programas.</li>
+                      <li>Windows: Ofrece una gran cantidad de software comercial y gratuito, con una amplia gama de aplicaciones y juegos disponibles. La tienda de aplicaciones de Microsoft también proporciona acceso a una variedad de software.</li>
+                      <li>macOS: Dispone de una tienda de aplicaciones oficial llamada App Store y también admite la instalación de software desde otras fuentes.</li>
+                    </ul>
+                <br>
+                  <li>Compatibilidad de hardware:</li>
+                    <ul style="list-style-type: square;">
+                      <li>Linux: Ha mejorado significativamente en términos de compatibilidad de hardware, pero aún puede haber problemas con ciertos componentes más nuevos o especializados.</li>
+                      <li>Windows: Es conocido por su amplia compatibilidad con hardware, ya que muchos fabricantes de hardware desarrollan controladores específicamente para Windows.</li>
+                      <li>macOS: Funciona exclusivamente en hardware de Apple, lo que garantiza una alta integración y compatibilidad con sus dispositivos.</li>
+                    </ul>
+                <br>
+                  <li>Uso en servidores y dispositivos móviles:</li>
+                    <ul style="list-style-type: square;">
+                      <li>Linux: Es ampliamente utilizado en servidores debido a su estabilidad, seguridad y capacidad de personalización. Además, Android, un sistema operativo móvil basado en Linux, es el más popular en dispositivos móviles.</li>
+                      <li>Windows: También se utiliza en servidores, especialmente en entornos corporativos, pero Linux es más dominante en este ámbito. Windows Phone fue el intento de Microsoft de entrar en el mercado de dispositivos móviles, pero no logró una gran cuota de mercado.</li>
+                      <li>macOS: Aunque no es comúnmente utilizado en servidores, macOS es popular en el ámbito creativo y educativo, y es el sistema operativo predeterminado en las computadoras Mac de Apple.</li>
+                    </ul>
+                </ol>
                 <div class="blog-image-doble">
                     <img src="media/linux2.jpg" alt="">
                     <img src="media/linux3.jpg" alt="">
@@ -81,11 +100,13 @@
                 <p>Kali Linux es una distribución de Linux especializada en seguridad informática y pruebas de penetración. Fue desarrollada y es mantenida por Offensive Security, una empresa de seguridad cibernética. Kali Linux se basa en Debian y está diseñada para ser una potente y completa herramienta para profesionales de la seguridad, investigadores y entusiastas interesados en evaluar y mejorar la seguridad de sistemas y redes.</p>
                 <br>
                 <p>Características principales de Kali Linux:</p>
-                <p>1. Herramientas de seguridad: Kali Linux viene preinstalada con una amplia variedad de herramientas de seguridad, más de 600, que abarcan desde análisis de vulnerabilidades, explotación, auditoría inalámbrica, ingeniería inversa, hasta pruebas de penetración y análisis forense digital.</p>
-                <p>2. Enfoque en pruebas de penetración: Kali Linux está diseñada específicamente para pruebas éticas de seguridad, lo que significa que debe utilizarse en entornos autorizados y con fines legales para identificar y corregir posibles vulnerabilidades en sistemas y redes.</p>
-                <p>3. Actualizaciones regulares: La distribución se actualiza regularmente para incluir las últimas herramientas y parches de seguridad, asegurando que los profesionales de seguridad tengan acceso a las últimas técnicas y tecnologías.</p>
-                <p>4. Compatibilidad con hardware y virtualización: Kali Linux es compatible con una amplia variedad de hardware y también se puede utilizar en entornos de virtualización, lo que permite a los usuarios ejecutarla de forma segura en máquinas virtuales para pruebas y experimentos.</p>
-                <p>5. Amplia comunidad de usuarios: Kali Linux cuenta con una comunidad activa de usuarios, foros y recursos en línea que facilitan el aprendizaje y el intercambio de conocimientos sobre seguridad informática.</p>
+                <ol>
+                  <li>Herramientas de seguridad: Kali Linux viene preinstalada con una amplia variedad de herramientas de seguridad, más de 600, que abarcan desde análisis de vulnerabilidades, explotación, auditoría inalámbrica, ingeniería inversa, hasta pruebas de penetración y análisis forense digital.</li>
+                  <li>Enfoque en pruebas de penetración: Kali Linux está diseñada específicamente para pruebas éticas de seguridad, lo que significa que debe utilizarse en entornos autorizados y con fines legales para identificar y corregir posibles vulnerabilidades en sistemas y redes.</li>
+                  <li>Actualizaciones regulares: La distribución se actualiza regularmente para incluir las últimas herramientas y parches de seguridad, asegurando que los profesionales de seguridad tengan acceso a las últimas técnicas y tecnologías.</li>
+                  <li>Compatibilidad con hardware y virtualización: Kali Linux es compatible con una amplia variedad de hardware y también se puede utilizar en entornos de virtualización, lo que permite a los usuarios ejecutarla de forma segura en máquinas virtuales para pruebas y experimentos.</li>
+                  <li>Amplia comunidad de usuarios: Kali Linux cuenta con una comunidad activa de usuarios, foros y recursos en línea que facilitan el aprendizaje y el intercambio de conocimientos sobre seguridad informática.</li>
+                </ol>
                 <br>
                 <p>Es importante destacar que debido a la naturaleza de sus herramientas y enfoque, Kali Linux está dirigida principalmente a usuarios con conocimientos técnicos y experiencia en seguridad informática. Si bien es una herramienta poderosa para los profesionales en el campo, también debe utilizarse con responsabilidad y ética, evitando cualquier actividad ilegal o no autorizada.</p>
                 <div class="blog-image">
