--- a/ia/deepLearning.html
+++ b/ia/deepLearning.html
@@ -50,37 +50,48 @@
                 </div>
                 <h2>Aplicaciones</h2>
                 <p>El Deep Learning ha impulsado el progreso en diversas áreas y ha llevado a avances significativos en la sociedad. A continuación, se presentan algunas aplicaciones del Deep Learning que tal vez encuentres familiar:</p>
-                <p>1. Reconocimiento de voz y traducción: Los asistentes de voz, como Siri y Google Assistant, utilizan el Deep Learning para comprender mejor y responder a nuestras preguntas y comandos en diferentes idiomas.</p>
-                <p>2. Visión por computadora: El Deep Learning es ampliamente utilizado en sistemas de reconocimiento facial, clasificación de imágenes y detección de objetos en fotos y videos.</p>
-                <p>3. Vehículos autónomos: La conducción autónoma es posible gracias a redes neuronales profundas que analizan datos en tiempo real para tomar decisiones mientras conducen.</p>
-                <p>4. Salud y medicina: Los diagnósticos médicos se han mejorado significativamente gracias a aplicaciones de Deep Learning que ayudan a analizar imágenes médicas, detectar enfermedades y planificar tratamientos más efectivos.</p>
+                <ol>
+                    <li>Reconocimiento de voz y traducción: Los asistentes de voz, como Siri y Google Assistant, utilizan el Deep Learning para comprender mejor y responder a nuestras preguntas y comandos en diferentes idiomas.</li>
+                    <li>Visión por computadora: El Deep Learning es ampliamente utilizado en sistemas de reconocimiento facial, clasificación de imágenes y detección de objetos en fotos y videos.</li>
+                    <li>Vehículos autónomos: La conducción autónoma es posible gracias a redes neuronales profundas que analizan datos en tiempo real para tomar decisiones mientras conducen.</li>
+                    <li>Salud y medicina: Los diagnósticos médicos se han mejorado significativamente gracias a aplicaciones de Deep Learning que ayudan a analizar imágenes médicas, detectar enfermedades y planificar tratamientos más efectivos.</li>
+                </ol>
                 <div class="blog-image-doble-grande">
                     <img src="media/deep2.jpg" alt="">
                     <img src="media/deep3.jpg" alt="">
                 </div>
                 <h2>Conceptos clave</h2>
-                <p>- Red Neuronal: Es una estructura compuesta por múltiples capas de neuronas artificiales interconectadas, diseñada para imitar el funcionamiento del cerebro humano.</p>
-                <p>- Neurona Artificial: Es una unidad computacional que procesa datos y realiza cálculos en una red neuronal.</p>
-                <p>- Entrenamiento: Es el proceso mediante el cual la red neuronal ajusta sus conexiones y parámetros para aprender de los datos proporcionados.</p>
-                <p>- Capas Ocultas: Son las capas intermedias entre la entrada y la salida en una red neuronal, donde se extraen y procesan características complejas.</p>
-                <p>- Aprendizaje Profundo Supervisado: Es un tipo de entrenamiento donde la red neuronal se entrena con datos etiquetados para hacer predicciones precisas.</p>
-                <p>- Backpropagation: Es el algoritmo que se utiliza para ajustar los pesos (parámetros) de las conexiones en una red neuronal durante el entrenamiento.</p>
+                <ul style="list-style-type: circle;">
+                    <li>Red Neuronal: Es una estructura compuesta por múltiples capas de neuronas artificiales interconectadas, diseñada para imitar el funcionamiento del cerebro humano.</li>
+                    <li>Neurona Artificial: Es una unidad computacional que procesa datos y realiza cálculos en una red neuronal.</li>
+                    <li>Entrenamiento: Es el proceso mediante el cual la red neuronal ajusta sus conexiones y parámetros para aprender de los datos proporcionados.</li>
+                    <li>Capas Ocultas: Son las capas intermedias entre la entrada y la salida en una red neuronal, donde se extraen y procesan características complejas.</li>
+                    <li>Aprendizaje Profundo Supervisado: Es un tipo de entrenamiento donde la red neuronal se entrena con datos etiquetados para hacer predicciones precisas.</li>
+                    <li>Backpropagation: Es el algoritmo que se utiliza para ajustar los pesos (parámetros) de las conexiones en una red neuronal durante el entrenamiento.</li>
+                </ul>
                 <h2>Diferencia entre Machine Learning y Deep Learning</h2>
                 <p>La principal diferencia entre Machine Learning (Aprendizaje Automático) y Deep Learning (Aprendizaje Profundo) radica en su estructura y alcance dentro del campo de la inteligencia artificial.</p>
                 <br>
-                <p>Machine Learning (Aprendizaje Automático):</p>
-                <p>- Definición: El Machine Learning es una rama de la inteligencia artificial que se centra en el desarrollo de algoritmos que permiten a las computadoras aprender a partir de datos sin una programación explícita.</p>
-                <p>- Enfoque: El enfoque principal del Machine Learning es aprender patrones y relaciones a partir de los datos de entrenamiento y utilizar ese conocimiento para hacer predicciones o tomar decisiones en nuevos datos no vistos previamente.</p>
-                <p>- Algoritmos: Los algoritmos de Machine Learning pueden ser diversos y abarcar diferentes enfoques, como aprendizaje supervisado, no supervisado, semi-supervisado y de refuerzo, entre otros.</p>
-                <p>- Capacidad de representación: Los algoritmos de Machine Learning pueden ser poderosos en muchas tareas, pero su capacidad para representar características complejas puede ser limitada en comparación con el Deep Learning.</p>
-                <p>- Requerimientos de datos: El rendimiento del Machine Learning depende en gran medida de la calidad y cantidad de los datos de entrenamiento proporcionados.</p>
-                <br>
-                <p>Deep Learning (Aprendizaje Profundo):</p>
-                <p>- Definición: El Deep Learning es una subárea del Machine Learning que se basa en redes neuronales artificiales profundas para aprender y realizar tareas más complejas y abstractas.</p>
-                <p>- Enfoque: El enfoque central del Deep Learning es utilizar redes neuronales profundas, que son estructuras con múltiples capas interconectadas, para aprender automáticamente características y patrones cada vez más complejos en los datos.</p>
-                <p>- Redes Neuronales Profundas: En el Deep Learning, las redes neuronales profundas tienen múltiples capas ocultas que permiten extraer y procesar características en distintos niveles de abstracción.</p>
-                <p>- Capacidad de representación: Las redes neuronales profundas tienen una alta capacidad de representación y pueden aprender características altamente complejas y abstracciones, lo que las hace especialmente efectivas en tareas de visión por computadora, procesamiento del lenguaje natural y otras tareas complejas.</p>
-                <p>- Requerimientos de datos: El entrenamiento de redes neuronales profundas generalmente requiere grandes cantidades de datos y una considerable potencia computacional, lo que puede hacer que su entrenamiento sea más costoso en términos de tiempo y recursos.</p>
+                <ul style="list-style-type: square;">
+                    <li>Machine Learning (Aprendizaje Automático):</li>
+                        <ol type="I">
+                            <li>Definición: El Machine Learning es una rama de la inteligencia artificial que se centra en el desarrollo de algoritmos que permiten a las computadoras aprender a partir de datos sin una programación explícita.</li>
+                            <li>Enfoque: El enfoque principal del Machine Learning es aprender patrones y relaciones a partir de los datos de entrenamiento y utilizar ese conocimiento para hacer predicciones o tomar decisiones en nuevos datos no vistos previamente.</li>
+                            <li>Algoritmos: Los algoritmos de Machine Learning pueden ser diversos y abarcar diferentes enfoques, como aprendizaje supervisado, no supervisado, semi-supervisado y de refuerzo, entre otros.</li>
+                            <li>Capacidad de representación: Los algoritmos de Machine Learning pueden ser poderosos en muchas tareas, pero su capacidad para representar características complejas puede ser limitada en comparación con el Deep Learning.</li>
+                            <li>Requerimientos de datos: El rendimiento del Machine Learning depende en gran medida de la calidad y cantidad de los datos de entrenamiento proporcionados.</li>
+                        </ol>
+                <br>        
+                    <li>Deep Learning (Aprendizaje Profundo):</li>
+                        <ol type="I">
+                            <li>Definición: El Deep Learning es una subárea del Machine Learning que se basa en redes neuronales artificiales profundas para aprender y realizar tareas más complejas y abstractas.</li>
+                            <li>Enfoque: El enfoque central del Deep Learning es utilizar redes neuronales profundas, que son estructuras con múltiples capas interconectadas, para aprender automáticamente características y patrones cada vez más complejos en los datos.</li>
+                            <li>Redes Neuronales Profundas: En el Deep Learning, las redes neuronales profundas tienen múltiples capas ocultas que permiten extraer y procesar características en distintos niveles de abstracción.</li>
+                            <li>Capacidad de representación: Las redes neuronales profundas tienen una alta capacidad de representación y pueden aprender características altamente complejas y abstracciones, lo que las hace especialmente efectivas en tareas de visión por computadora, procesamiento del lenguaje natural y otras tareas complejas.</li>
+                            <li>Requerimientos de datos: El entrenamiento de redes neuronales profundas generalmente requiere grandes cantidades de datos y una considerable potencia computacional, lo que puede hacer que su entrenamiento sea más costoso en términos de tiempo y recursos.</li>
+                
+                        </ol>
+                </ul>        
                 <br>
                 <p>En resumen, el Machine Learning es una disciplina más amplia que abarca diversos enfoques para el aprendizaje a partir de datos, mientras que el Deep Learning es una técnica específica dentro del Machine Learning que utiliza redes neuronales profundas para aprender patrones y características complejas en grandes conjuntos de datos. El Deep Learning ha demostrado ser especialmente efectivo en tareas de alto nivel, como reconocimiento de imágenes, procesamiento del lenguaje natural y juegos de estrategia, impulsando avances significativos en el campo de la inteligencia artificial.</p>
                 <h2>Conclusión</h2>
