--- a/network/smtp.html
+++ b/network/smtp.html
@@ -46,8 +46,10 @@
                     <img src="media/smtp1.png" alt="">
                 </div>
                 <h2>Roles del servidor SMTP y del servidor de correo entrante</h2>
-                <p>- Servidor SMTP: Su función principal es enviar correos electrónicos. Cuando envías un correo, tu cliente se comunica con el servidor SMTP saliente, y este se encarga de entregar el mensaje al servidor de correo del destinatario.</p>
-                <p>- Servidor de Correo Entrante (IMAP o POP3): Este servidor se encarga de recibir y almacenar los correos electrónicos en la bandeja de entrada del destinatario. Los protocolos más comunes utilizados para recuperar correos son IMAP (Internet Message Access Protocol) y POP3 (Post Office Protocol version 3).</p>
+                <ul style="list-style-type: circle;">
+                    <li>Servidor SMTP: Su función principal es enviar correos electrónicos. Cuando envías un correo, tu cliente se comunica con el servidor SMTP saliente, y este se encarga de entregar el mensaje al servidor de correo del destinatario.</li>
+                    <li>Servidor de Correo Entrante (IMAP o POP3): Este servidor se encarga de recibir y almacenar los correos electrónicos en la bandeja de entrada del destinatario. Los protocolos más comunes utilizados para recuperar correos son IMAP (Internet Message Access Protocol) y POP3 (Post Office Protocol version 3).</li>
+                </ul>
                 <h2>Seguridad y autenticación en el SMTP</h2>
                 <p>Dado que el SMTP ha sido ampliamente utilizado, también ha sido objeto de preocupación por problemas de seguridad. Para garantizar la privacidad y la autenticidad en el envío y recepción de correos, se han desarrollado extensiones de seguridad como SMTP sobre TLS (SMTPS) y SMTP con autenticación (SMTP AUTH). Estas extensiones cifran los datos enviados entre los servidores de correo y autentican a los usuarios para prevenir el acceso no autorizado.</p>
                 <div class="blog-image">
